find average on file