@@ -1,34 +1,34 @@
-import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.stream.Stream;
 
 public class CSVStreamProcessor {
 
-    public static void calculateAverageAge( String cvsFilePath) throws IOException{
-        try(Stream<String> lines = Files.lines(Path.of(cvsFilePath))){
-            var stats = lines
-                    .skip(1) // skip header
-                    .map(line -> line.split(",")) // split into [Name, Age]
-                    .filter(parts -> parts.length == 2)
-                    .map(parts -> parts[1].trim()) // extract and trim age
-                    .flatMapToInt(ageStr -> {
+    public static double calculateAverageAge(String cvsFilePath) throws IOException {
+        try (Stream<String> lines = Files.lines(Paths.get(cvsFilePath))) {
+            return lines
+//                   skip the first line(name,age)
+                    .skip(1)
+//                    split lines[ "name","age"]
+                    .map(line -> {
+                        String[] parts = line.split(",");
+//                        try to convert age to num
                         try {
-                            return java.util.stream.IntStream.of(Integer.parseInt(ageStr));
+                            return Integer.parseInt(parts[1]);
                         } catch (NumberFormatException e) {
-                            return java.util.stream.IntStream.empty(); // skip invalid age
+                            return null;
                         }
                     })
-                    .summaryStatistics();
-
-            if (stats.getCount() > 0) {
-                double avg = stats.getAverage();
-                System.out.printf("Average Age: %.2f%n", avg);
-            } else {
-                System.out.println("No valid ages found.");
-            }
+//                    remove invalid(null) age
+                    .filter(age->age != null)
+//                    turn it into astream of just numbers(age)
+                    .mapToInt(Integer::intValue)
+//                    calculate average
+                    .average()
+                    .orElse(0);
         }
 
     }
+
 }
